--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<hgroup>
 			<h1>Joandora</h1>
 			<p>가장 제주다운 수잔리집</p>
+			<h1><a href="#">
+				<img src="./images/bg.jpg" alt="요안도라"></a></h1>
         </hgroup>
 	</header>
 	<hr>
