--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>요안도라</title>
-    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./style/common.css">
 </head>
 <body>
 	<header>
@@ -19,8 +19,7 @@
     <nav id="gnb">
 		<h2 class="hidden">요안도라 이용메뉴</h2>
 		<ul>
-		
-			<li><a href="#">이용 안내</a></li>
+		    <li><a href="#">이용 안내</a></li>
 			<li><a href="#">객실 소개</a></li>
 			<li><a href="#">예약 방법</a></li>
 			<li><a href="#">예약하기</a></li>
